--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,26 +12,20 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: Apache Software License",
 ]
-
-# Changed
+# UPDATE: Using >= instead of ==, so newer packages can be installed when combining w/ other repos
 dependencies = [
-    # Original torch dependencies, if using `pip install -e . --index-url https://download.pytorch.org/whl/cu121`
-    "torch==2.1.2", "torchvision==0.16.2",
-
-    # New torch dependencies for CUDA 12.4, if using `pip install -e . --index-url https://download.pytorch.org/whl/cu124`
-    # "torch==2.4.0", "torchvision",
-
-    # Other dependencies (not modified)
-    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
-    "accelerate==0.21.0", "peft", "bitsandbytes",
-    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
-    "gradio==4.16.0", "gradio_client==0.8.1",
-    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
+    "torch>=2.1.2", "torchvision>=0.16.2",
+    "transformers>=4.37.2", "tokenizers>=0.15.1", "sentencepiece>=0.1.99", "shortuuid",
+    "accelerate>=0.21.0", "peft", "bitsandbytes",
+    "pydantic", "markdown2[all]", "numpy", "scikit-learn>=1.2.2",
+    "gradio>=4.16.0", "gradio_client>=0.8.1",
+    "requests", "httpx>=0.24.0", "uvicorn", "fastapi",
+    "einops>=0.6.1", "einops-exts>=0.0.4", "timm>=0.6.13",
 ]
 
 [project.optional-dependencies]
-train = ["deepspeed==0.12.6", "ninja", "wandb"]
+# UPDATE: Using >= instead of ==, so newer packages can be installed when combining w/ other repos
+train = ["deepspeed>=0.12.6", "ninja", "wandb"]
 build = ["build", "twine"]
 
 [project.urls]
